--- a/part1/exercises/src/components/HobbyLinks.module.css
+++ b/part1/exercises/src/components/HobbyLinks.module.css
@@ -1,7 +1,10 @@
-label {
-    padding-left: 30px;
-}
+
 
 li {
     text-align: left;
+    font-size: 20px;
+}
+
+div {
+    border: 3px solid brown;
 }
