--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,13 +1,14 @@
 .choresText {
    color: brown;
-   font-size: 25px;
+   font-size: 20px;
    font-family: 'Lucida Grande';
    font-style: italic;
 }
 
 .choresHeading {
    color: brown;
-   font-size: 40px;
+   font-size: 30px;
    font-family: 'Lucida Grande';
    text-decoration: underline;
+   text-align: left;
 }
