--- a/part1/exercises/src/components/MovieList.module.css
+++ b/part1/exercises/src/components/MovieList.module.css
@@ -1,13 +1,15 @@
 .movieText {
    color: purple;
    text-align: left;
-   font-size: 25px;
+   font-size: 20px;
 
 }
 
 .movieHeading {
    color: green;
-   font-size: 40px;
+   background-color: peachpuff;
+   font-size: 30px;
    text-align: left;
    padding-left: 20px;
 }
+
